--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -66,9 +66,36 @@
         const input = document.getElementById('paste-input');
         const output = document.getElementById('paste-output');
 
-        document.getElementById('paste-input').addEventListener('keyup', () => {
+        input.addEventListener('keyup', () => {
             output.textContent = input.value;
             hljs.highlightElement(output)
         })
+
+        input.addEventListener('keydown', event => {
+            if (event.keyCode !== 9) return
+
+            event.preventDefault();
+            
+            input.set
+        })
+
+        const enableTab = elementID => {
+
+            const element = document.getElementById(elementID);
+
+            element.onkeydown = event => {
+
+                if (event.keyCode !== 9) return;
+        
+                element.setRangeText(
+                    '  ',
+                    element.selectionStart,
+                    element.selectionStart,
+                    'end'
+                  )
+            };
+        }
+        
+        enableTab('paste-input')
     </script>
 {% endblock %}
