--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -46,13 +46,13 @@
                         </div>
                     </div>
                 </form>
-                <div id="mirror-container">
-                    <label for="paste-output">Code Mirror:</label>
-                    <pre>
-                        <code id="paste-output" class="line-numbers language-javascript">sdfs
-                        </code>
-                    </pre>
-                </div>
+                <pre id="mirror-container">
+                    <div>
+                        <label for="paste-output">Code Mirror:</label>
+                            <code id="paste-output" class="line-numbers language-javascript">sdfs
+                            </code>
+                    </div>
+                </pre>
             </div>
         </div>
         <div id="recent-pastes" class="side-bar right bar-bg-col primary-fc">
