css: additional styling for code mirror view

--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -19,7 +19,7 @@
                             {{ form.syntax }}
                         </div>
                     </div>
-                    <textarea class="width-100 bg-input-col border-radius-half" name="body" id="paste-input" rows="1"></textarea>
+                    <textarea class="width-100 bg-input-col border-radius-half" name="body" id="paste-input" rows="1" placeholder="Paste your content here..."></textarea>
                     <div class="grid paste-options">
                         <div>
                             <input class="width-100 pointer" type="submit" value="Submit Paste">
