--- a/templates/navigation/navigation_bar.html
+++ b/templates/navigation/navigation_bar.html
@@ -4,5 +4,9 @@
     <h1 class="nav-item primary-fc text-center">django paste</h1>
     <a href="/" class="nav-item text-center">New Paste</a>
     <a href="#" class="nav-item text-center">About</a>
-    <a href="#" class="nav-item text-center">Log In</a>
+    {% if user.is_authenticated %}
+        <a href="#" class="nav-item text-center">Log Out</a>
+    {% else %}
+        <a href="#" class="nav-item text-center">Log In</a>
+    {% endif %}
 </nav>
