--- a/templates/navigation/navigation_bar.html
+++ b/templates/navigation/navigation_bar.html
@@ -4,9 +4,15 @@
     <h1 class="nav-item primary-fc text-center">django paste</h1>
     <a href={% url 'upload' %} class="nav-item text-center">New Paste</a>
     <a href="#" class="nav-item text-center">About</a>
-    {% if user.is_authenticated %}
-        <a href={% url 'logout' %} class="nav-item text-center">Log Out</a>
-    {% else %}
-        <a href={% url 'login' %} class="nav-item text-center">Log In</a>
-    {% endif %}
+    <div class="dropdown nav-item text-center">
+        <div class="dropdown-toggle primary-fc">Account ></div>
+        <div class="dropdown-menu width-100">
+            {% if user.is_authenticated %}
+                <a href={% url 'logout' %} class="dropdown-item">Log Out</a>
+            {% else %}
+                <a href={% url 'login' %} class="dropdown-item">Log In</a>
+                <a href={% url 'register' %} class="dropdown-item">Register</a>
+            {% endif %}
+        </div>
+    </div>
 </nav>
