complete: login/register forms and styling

--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div id="recent-pastes" class="side-bar right bar-bg-col primary-fc">
-            <h2 class="text-vertical">Recent Pastes</h2>
+            {% include 'recent_pastes_widget.html' %}
         </div>
         <div id="news" class="side-bar left bar-bg-col primary-fc">
             <h2 class="text-vertical">News</h2>
