--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -2,13 +2,17 @@
 
 {% block content %}
 
-    <form action="#" method="POST">
+<div class="auth-form-container">
+    <form class="auth-form primary-fc" action="#" method="POST">
         {% csrf_token %}
+        <h1>Login</h1>
         <label for="id_username">Username:</label>
         <input type="text" name="username" id="id_username" maxlength="150" required>
         <label for="is_paddword">Password:</label>
         <input type="password" name="password" id="id_password" required>
         <input class="pointer" type="submit" value="Submit">
+        <p>Not signed up yet?<a href={% url 'register' %}> Click here to register!</a></p>
     </form>
+</div>
 
 {% endblock content %}
