--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 
-    <form action="#" method="POST">
+<div class="auth-form-container">
+    <form class="auth-form primary-fc" action="#" method="POST">
         {% csrf_token %}
+        <h1>Registration</h1>
         <label for="id_username">Username:</label>
         <input type="text" name="username" id="id_username" maxlength="150">
         <label for="is_paddword1">Password:</label>
@@ -11,6 +13,8 @@
         <label for="is_paddword2">Confirm Password:</label>
         <input type="password" name="password2" id="id_password2">
         <input class="pointer" type="submit" value="Submit">
+        <p>Already have an account?<a href={% url 'login' %}> Click here to login!</a></p>
     </form>
+</div>
 
 {% endblock content %}
