--- a/templates/navigation/navigation_bar.html
+++ b/templates/navigation/navigation_bar.html
@@ -5,7 +5,7 @@
     <a href={% url 'upload' %} class="nav-item text-center">New Paste</a>
     <a href="#" class="nav-item text-center">About</a>
     <div class="dropdown nav-item text-center">
-        <div class="dropdown-toggle primary-fc">Account ></div>
+        <a id="account-nav" href="#" style="display: block;" class="dropdown-toggle primary-fc">Account ></a>
         <div class="dropdown-menu width-100">
             {% if user.is_authenticated %}
                 <a href={% url 'logout' %} class="dropdown-item">Log Out</a>
