complete/refactor: modified core template structure, decoupled a lot of templating

--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'content_container.html' %}
 
-{% block content %}
+{% block primary_content %}
 
 <div class="auth-form-container">
     <form class="auth-form primary-fc" action="#" method="POST">
@@ -17,4 +17,4 @@
     </form>
 </div>
 
-{% endblock content %}
+{% endblock primary_content %}
