css: paste display deminsion

--- a/pastes/templates/paste_details.html
+++ b/pastes/templates/paste_details.html
@@ -2,7 +2,7 @@
 
 {% block primary_content %}
 
-<div class="flex justify-center align-center width-100">
+<div id="paste-display-container-wrapper" class="flex justify-center bar-bg-col border-radius-full">
     <div id="paste-display-container">
         <pre>
             <code class="line-numbers language-{{ syntax }}">{{ paste }}</code>
