--- a/pastes/templates/paste_details.html
+++ b/pastes/templates/paste_details.html
@@ -4,8 +4,12 @@
 
 <div id="paste-display-container-wrapper" class="flex justify-center bar-bg-col border-radius-full">
     <div id="paste-display-container">
+        <div class="flex align-center overflow-hidden border-radius-half">
+            <h2 class="inline-block bg-secondary-col padding-half-rem">Title: </h2>
+            <h2 class="inline-block bg-primary-col padding-half-rem width-100 text-center">{{ paste.title }}</h2>
+        </div>
         <pre>
-            <code class="line-numbers language-{{ syntax }}">{{ paste }}</code>
+            <code class="line-numbers language-{{ syntax }}">{{ paste.body }}</code>
         </pre>
     </div>
 </div>
