complete: added copy ability and fixed code element collapsing

--- a/pastes/templates/paste_details.html
+++ b/pastes/templates/paste_details.html
@@ -1,17 +1,30 @@
 {% extends 'content_container.html' %}
-
+{% load static %}
 {% block primary_content %}
 
-<div id="paste-display-container-wrapper" class="flex justify-center bar-bg-col border-radius-full">
-    <div id="paste-display-container">
-        <div class="flex align-center overflow-hidden border-radius-half">
+<div id="paste-display-container-wrapper" class="bar-bg-col border-radius-full">
+    <div id="paste-display-container" class="grid height-100">
+        <div class="flex align-center bg-primary-col overflow-hidden border-radius-half">
             <h2 class="inline-block bg-secondary-col padding-half-rem">Title: </h2>
             <h2 class="inline-block bg-primary-col padding-half-rem width-100 text-center">{{ paste.title }}</h2>
+            <img id="copy-button" class="pointer bg-secondary-col" src={% static 'images/copy.svg' %} alt="" onclick="copy()">
         </div>
-        <pre>
-            <code class="line-numbers language-{{ syntax }}">{{ paste.body }}</code>
-        </pre>
+            <pre style="position:relative;"><code id="paste-body" class="height-100 width-100 line-numbers language-{{ syntax }}">{{ paste.body }}</code></pre>
     </div>
 </div>
+<script>
+    const code = document.getElementById('paste-body');
 
+    const copy = () => {
+
+        const text = document.createElement('textarea');
+
+        text.value = code.innerText;
+        document.body.appendChild(text);
+        text.select();
+        document.execCommand('copy');
+        text.remove();
+    }
+
+</script>
 {% endblock primary_content %}
