--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -43,9 +43,7 @@
         </form>
         <div id="mirror-container">
             <label for="paste-output">Code Mirror:</label>
-            <pre>
-                <code id="paste-output" class="line-numbers language-javascript">sdfs</code>
-            </pre>
+            <pre><code id="paste-output" class="line-numbers language-javascript">sdfs</code></pre>
         </div>
     </div>
     <script src={% static 'scripts/code-mirror.js' %}></script>
