complete: added delete button rendering for paste owners

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -351,7 +351,7 @@ footer > h2 {
     gap: 2rem;
 }
 
-#copy-button {
+#copy-button, #trash-button {
     width: 1.5rem !important;
     margin-right: 0.6rem;
     padding: 0.1rem;
@@ -359,7 +359,12 @@ footer > h2 {
     transition: 0.25s;
 }
 
-#copy-button:hover {
+#trash-button {
+    height: 1.5rem;
+    background-color: red;
+}
+
+#copy-button:hover, #trash-button:hover {
     transform: scale(1.35);
 }
 
