complete: added default not_found template

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,6 +237,10 @@ textarea, input, select {
     align-items: center;
 }
 
+.align-self-center {
+    align-self: center;
+}
+
 /* ============= *
  *  APPLICATION  *
  * ============= */
