--- a/pastes/templates/error_page.html
+++ b/pastes/templates/error_page.html
@@ -1,6 +1,6 @@
 {% extends 'content_container.html' %}
 {% block primary_content %}
 
-    <h1 class="align-self-center">Oops! Paste does not exist.</h1>
+    <h1 class="align-self-center">{{ error }}</h1>
 
 {% endblock %}
